# ESP32-examples

./: .gitignore  README.md
app/ambient/: CMakeLists.txt
app/enviroment/: CMakeLists.txt
app/gmail/: CMakeLists.txt
app/google/: CMakeLists.txt  ReadMe.md
app/twitter/: CMakeLists.txt
app/twitter2/: CMakeLists.txt
components/adt7410/: CMakeLists.txt  Kconfig  adt7410.c
components/aqm0802a/: CMakeLists.txt  aqm0802a.c
components/i2c_master/: CMakeLists.txt  Kconfig.projbuild  i2c_master.c
components/ns_adc/: CMakeLists.txt  Kconfig  ns_adc.c
components/ns_adt7410/: CMakeLists.txt  Kconfig  ns_adt7410.c
components/ns_ambient/: CMakeLists.txt  Kconfig  ReadMe.md  ns_ambient.c
components/ns_aqm0802a/: CMakeLists.txt  ns_aqm0802a.c
components/ns_coap/: CMakeLists.txt  Kconfig  ns_coap.c
components/ns_crc8/: CMakeLists.txt  ns_crc8.c
components/ns_google_api/: CMakeLists.txt  Kconfig  RedMe.md  ns_google_api.c
components/ns_http/: CMakeLists.txt  ns_http.c
components/ns_i2c_master/: CMakeLists.txt  Kconfig  ns_i2c_master.c
components/ns_mdns/: CMakeLists.txt  Kconfig  ns_mdns.c
components/ns_sht4x/: CMakeLists.txt  Kconfig  ns_sht4x.c
components/ns_shtc3/: CMakeLists.txt  Kconfig  ns_shtc3.c
components/ns_sntp/: CMakeLists.txt  Kconfig  ns_sntp.c
components/ns_twitter/: CMakeLists.txt  Kconfig  ns_heap.c  (+1 more)
components/ns_wifi/: CMakeLists.txt  Kconfig  README.md  ns_ap_select_web.c  ns_gpio.c  ns_nvs.c  ns_spiffs.c  ns_wifi.c  partitions.csv  sdkconfig.defaults
components/ns_wifi/ap-select-app/: ReadMe.md  index.html  package-lock.json  package.json  postcss.config.cjs  purgecss-and-gzip.sh  vite.config.js
components/ns_wifi/ap-select-app/src/: App.svelte
components/ns_wifi/include/: ns_ap_select_web.h  ns_gpio.h  ns_spiffs.h  ns_wifi.h
net/http-server/main/: CMakeLists.txt  Kconfig.projbuild  gpio.c  gpio.h  http-server.c  http_serve.h  http_server.c  m_dns.c  m_dns.h  wifi.c  wifi.h
proj-template/: CMakeLists.txt  Makefile  README.md
(+205 files in other folders)
